--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="./src/assets/beeapp.svg" />
+    <link rel="icon" type="image/svg+xml" href="/beeapp/assets/beeapp.94a8dc13.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bee-Application</title>
+    <script type="module" crossorigin src="/beeapp/assets/index.435a2773.js"></script>
+    <link rel="stylesheet" href="/beeapp/assets/index.ab8d4b7a.css">
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    
   </body>
 </html>
